--- a/src/pages/posts/2018-10-26-test-post.md
+++ b/src/pages/posts/2018-10-26-test-post.md
@@ -7,5 +7,7 @@ tags:
   - another tag
 s3Image: red-alert-3.jpg
 slugPartial: test-post-slug
+description: A test description
+subtitle: ''
 ---
 Test body
