Update Gamepad News “2018-10-27-headline” (#10)
Automatically generated. Merged on Netlify CMS.

--- a/src/pages/posts/2018-10-27-headline.md
+++ b/src/pages/posts/2018-10-27-headline.md
@@ -1,15 +1,16 @@
 ---
-title: Headline
-subtitle: subtitle
+title: 'Headline (updated: 9:20pm)'
+subtitle: subtitle updated
 date: 2018-10-28T01:38:10.924Z
-author: Author
-metaTitle: Meta title
-metaDescription: Meta description
+author: Author updated
+metaTitle: Meta title updated
+metaDescription: Meta description updated
 tags:
   - tag 1
   - tag 2
   - xbox
   - e3
+  - pc
 s3Image: dead-cells.jpg
 slugPartial: super-awesome-slug
 ---
